--- a/css_general.css
+++ b/css_general.css
@@ -33,24 +33,14 @@
 }
 /*----------------*/
 
-
-
-
 #line {
 	height: 2px;
+  background-color: #F17240;
 }
 
 
 /*LEAFLET-SIDEBAR ALTERATIONS*/
 
-/*.leaflet-sidebar {
-  position: absolute;
-  top: 10px;
-  bottom: 0;
-  width: 100%;
-  overflow: hidden;
-  z-index: 2000;
-  height: 540px; }*/
   .leaflet-sidebar.collapsed {
     width: 60px; }
 
@@ -162,6 +152,9 @@
 	padding-left: 40px;
 	padding-right: 20px;
 	height: 440px;
+}
+.attributionInformation {
+  height: 380px;
 }
 
 #sidebarTitleText > a{
@@ -387,7 +380,6 @@ a:link {
 text-decoration: none;
 }
 a:visited {
-
 }
 
 a:hover {
@@ -439,7 +431,6 @@ hr {
 }
 #language > a {
     color: white;
-
 }
 
 
@@ -447,7 +438,7 @@ hr {
 #gitHub, #aw {
 	color: rgba(241,114,64,1);
 }
-#gitHub:hover, #aw:hover , #twitter:hover{
+#gitHub:hover, #logo:hover , #twitter:hover{
 	transform: scale(1.1)
 }
 #twitter {
@@ -459,19 +450,16 @@ hr {
 
 #aw {
   position: absolute;
-  bottom: 10px;
   left: 10px;
-  height: 50px;
-  width: 50px;
-  z-index: 2000;
 }
 
 #logo {
   position: absolute;
   z-index: 210;
-  background-color: white
+  background-color: transparent;
   height:100%;
   width: 100%;
+  left: 160px;
 }
 
 #symbolsBar {
